# Sentinel

./: .gitignore  .pre-commit-config.yaml  BRAND_GUIDELINES.md  CONTRIBUTING.md  README.md  manual_test_safety.py
sentinel-api/: pyproject.toml
sentinel-cli/: pyproject.toml
sentinel-core/: TESTING.md  demo_preview.py  pyproject.toml  rules_example.yaml
sentinel-core/sentinel_core/api/: __init__.py  config.py  deps.py  main.py  memory.py
sentinel-core/sentinel_core/api/models/: __init__.py  events.py  requests.py  responses.py
sentinel-core/sentinel_core/api/routers/: __init__.py  cleanpc.py  execute.py  plan.py  preview.py  scan.py  tasks.py  undo.py  websocket.py
sentinel-core/sentinel_core/api/websocket/: __init__.py  examples.py  manager.py
sentinel-core/sentinel_core/cleanpc/: __init__.py  classifiers.py  pipeline.py  rules.py
sentinel-core/sentinel_core/cli/: __init__.py  console.py  main.py
sentinel-core/sentinel_core/cli/commands/: __init__.py  apply.py  ask.py  clean.py  cleanpc.py  plan.py  scan.py  undo.py
sentinel-core/sentinel_core/cli/ui/: __init__.py  display.py  prompts.py
sentinel-core/sentinel_core/executor/: __init__.py  class_wrapper.py  executor.py  log_writer.py  undo.py
sentinel-core/sentinel_core/memory/: __init__.py  db.py  memory.py
sentinel-core/sentinel_core/models/: __init__.py  enums.py  executor.py  filesystem.py  logging.py  planner.py  preferences.py
sentinel-core/sentinel_core/planner/: __init__.py  ollama_client.py  planner_agent.py  planner_prompt.txt
sentinel-core/sentinel_core/preview/: __init__.py  preview.py
sentinel-core/sentinel_core/rules/: __init__.py  engine.py  models.py
sentinel-core/sentinel_core/safety/: __init__.py  constants.py  safety.py
sentinel-core/sentinel_core/scanner/: __init__.py  config.py  scanner.py
sentinel-core/tests/: conftest.py  test_cleanpc.py  test_db.py  test_executor.py  test_memory.py  test_models.py  test_preview.py  test_safety.py  test_scanner.py  test_undo.py
sentinel-core/tests/utils/: __init__.py  fake_generator.py  mock_filesystem.py
sentinel-web/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  tauri.conf.json.bak
sentinel-web/src-tauri/capabilities/: default.json
sentinel-web/src-tauri/icons/: README.md
sentinel-web/src-tauri/src/: main.rs
(+52 files in other folders)
