[tool.poetry]
name = "sentinel-core"
version = "0.1.0"
description = "Core logic engine for Sentinel"
authors = ["Mystic"]
readme = "README.md"
packages = [{include = "sentinel_core"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.0"
sqlmodel = "^0.0.14"
ollama = "^0.1.0"
pypdf = "^6.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
